people image files changes

--- a/droids.html
+++ b/droids.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>week1-Star Wars</title>
   <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
   <nav class="navagation">
     <ul>
@@ -14,7 +16,10 @@
     </ul>
   </nav>
   <header>Star Wars</header>
-
+<div class="card">
+  <img src="http://ids.si.edu/ids/deliveryService?id=NMAH-JN2017-01944-000001&max=1000" alt="C3PO">
+  <h2>C3PO</h2>
+</div>
 
   <article>
     <header></header>
@@ -23,4 +28,5 @@
   <footer>By Martin Sisk</footer>
   <script src="./scripts/main.js"></script>
 </body>
+
 </html>
